--- a/docs/source/Tutorial-2-Integrate-datasets-measured-by-different-platforms.ipynb
+++ b/docs/source/Tutorial-2-Integrate-datasets-measured-by-different-platforms.ipynb
@@ -150,9 +150,9 @@
    "id": "3ab00cbc",
    "metadata": {},
    "source": [
-    "- ### Training Spatialign model     \n",
+    "- ### Training `spatiAlign` model     \n",
     "\n",
-    "     Spatialign aims to aligns the biological effects, while maximized preserving spots/cells biological variances in the latent embedding.        \n",
+    "     `spatiAlign` aims to aligns the biological effects, while maximized preserving spots/cells biological variances in the latent embedding.        \n",
     "      \n",
     "    It is possible to fine-tune the parameters (tau1, tau2, tau3) to optimize the model's performance."
    ]
@@ -186,7 +186,7 @@
    "source": [
     "- ### Inference alignment datasets      \n",
     "    \n",
-    "     After model training, the learned lower-dimensional representations will be saved in adata.obsm['correct'], and the higher-dimensional representations will be saved in adata.X"
+    "     After model training, the learned lower-dimensional representations will be saved in `adata.obsm['correct']`, and the higher-dimensional representations will be saved in `adata.X`"
    ]
   },
   {
@@ -271,14 +271,6 @@
    "source": [
     "sc.pl.umap(merge_data, color=[\"batch\", \"celltype\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa881cb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
