--- a/docs/source/Tutorial-1-simulate-datasets.ipynb
+++ b/docs/source/Tutorial-1-simulate-datasets.ipynb
@@ -175,9 +175,9 @@
    "id": "0e2489db",
    "metadata": {},
    "source": [
-    "- ### Training Spatialign model     \n",
+    "- ### Training `spatiAlign` model     \n",
     "\n",
-    "     Spatialign aims to aligns the biological effects, while maximized preserving spots/cells biological variances in the latent embedding.        \n",
+    "     `spatiAlign` aims to aligns the biological effects, while maximized preserving spots/cells biological variances in the latent embedding.        \n",
     "      \n",
     "    It is possible to fine-tune the parameters (tau1, tau2, tau3) to optimize the model's performance."
    ]
@@ -211,7 +211,7 @@
    "source": [
     "- ### Inference alignment datasets      \n",
     "    \n",
-    "     After model training, the learned lower-dimensional representations will be saved in adata.obsm['correct'], and the higher-dimensional representations will be saved in adata.X"
+    "     After model training, the learned lower-dimensional representations will be saved in `adata.obsm['correct']`, and the higher-dimensional representations will be saved in `adata.X`."
    ]
   },
   {
@@ -296,22 +296,6 @@
    "source": [
     "sc.pl.umap(merge_data, color=[\"batch\", \"celltype\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0eb0de47",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7846d943",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
